--- a/index.html
+++ b/index.html
@@ -1551,6 +1551,11 @@
             .hero-details {
                 flex-direction: column;
                 gap: 0.3rem;
+                font-weight: 500;
+            }
+
+            .hero-eyebrow {
+                margin-top: -15px;
             }
 
             .founder-stats {
