--- a/index.html
+++ b/index.html
@@ -1558,6 +1558,17 @@
                 margin-top: -15px;
             }
 
+            .hero {
+                margin-top: -7rem;
+                padding-top: 7rem;
+                min-height: calc(100vh + 7rem);
+            }
+
+            .hero-bg {
+                top: -7rem;
+                height: calc(100% + 7rem);
+            }
+
             .founder-stats {
                 flex-wrap: wrap;
                 gap: 1.5rem;
