--- a/index.html
+++ b/index.html
@@ -1552,10 +1552,11 @@
                 flex-direction: column;
                 gap: 0.3rem;
                 font-weight: 500;
+                font-size: 1.2rem;
             }
 
             .hero-eyebrow {
-                margin-top: -15px;
+                margin-top: -55px;
             }
 
             .hero {
