--- a/index.html
+++ b/index.html
@@ -2035,10 +2035,10 @@
                 <p class="pricing-detail">Remaining 70% due 45 days before retreat</p>
             </div>
             <div class="pricing-ctas">
-                <a href="https://wa.me/9613543547?text=I'd%20like%20to%20pay%20the%2030%25%20deposit%20for%20the%20Maldives%20retreat" class="pricing-cta pricing-cta-secondary">
+                <a href="https://yoginomads.eu/cart/51493883937051:1?checkout" class="pricing-cta pricing-cta-secondary">
                     Pay 30% Deposit
                 </a>
-                <a href="https://wa.me/9613543547?text=I'd%20like%20to%20pay%20in%20full%20for%20the%20Maldives%20retreat" class="pricing-cta pricing-cta-primary">
+                <a href="https://yoginomads.eu/cart/51493884985627:1?checkout" class="pricing-cta pricing-cta-primary">
                     Pay in Full
                 </a>
             </div>
