--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>YogiNomads | Maldives Luxury Yoga Retreat</title>
+    <!-- Resource Hints for Faster Loading -->
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <link href="https://fonts.googleapis.com" rel="preconnect"/>
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+    <!-- Preload Critical Resources -->
+    <link rel="preload" as="image" href="IMG_7423.JPG" fetchpriority="high">
+    <link rel="preload" as="image" href="Beige-and-Blue.png">
+    <link rel="preload" as="image" href="Black-and-Blue.png">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&family=Lato:wght@300;400&family=Pinyon+Script&display=swap" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
     <style>
@@ -1667,7 +1675,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-bg">
-            <img src="IMG_7423.JPG" alt="Maldives aerial view of turquoise lagoon"/>
+            <img src="IMG_7423.JPG" alt="Maldives aerial view of turquoise lagoon" fetchpriority="high" loading="eager"/>
         </div>
         <div class="hero-overlay"></div>
         
@@ -2092,7 +2100,7 @@
         <!-- Full-bleed video placeholder (replace src with actual video) -->
         <div class="gallery-section gallery-fullbleed gallery-video-container">
             <!-- Replace this img with a video tag when you have video content:
-            <video autoplay muted loop playsinline>
+            <video autoplay muted loop playsinline preload="auto">
                 <source src="your-video.mp4" type="video/mp4">
             </video>
             -->
@@ -2127,12 +2135,12 @@
         <!-- Asymmetric duo -->
         <div class="gallery-section gallery-asymmetric">
             <div class="gallery-asymmetric-img">
-                <video autoplay muted loop playsinline>
+                <video autoplay muted loop playsinline preload="auto">
                     <source src="IMG_9643.MP4" type="video/mp4">
                 </video>
             </div>
             <div class="gallery-asymmetric-img">
-                <video autoplay muted loop playsinline>
+                <video autoplay muted loop playsinline preload="auto">
                     <source src="IMG_9362.MP4" type="video/mp4">
                 </video>
             </div>
