--- a/index.html
+++ b/index.html
@@ -2031,7 +2031,7 @@
         </div>
         <div class="pricing-card">
             <div class="pricing-badge">
-                ✨ Early Confirmation — Pay before February 15 for a chance to win $500 credit
+                Early Confirmation — Pay before February 15 for a chance to win $500 credit
             </div>
             <div class="pricing-amount">
                 <div class="pricing-original">$2,450</div>
